@@ -717,7 +717,7 @@ public class Equals {
 		@Override
 		public int compare( Object o1, Object o2 ) {
 			
-			return new Integer( list.indexOf( o1 ) )
+			return Integer.valueOf( list.indexOf( o1 ) )
 					.compareTo( Integer.valueOf( list.indexOf( o2 ) ) );
 			
 		}
